# system-monitor

./: Cargo.toml  makefile
src/: main.rs
templates/: cpu-usage.html  index.html
