[package]
name = "system-monitor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["ws"] }
sysinfo = "0.29.10"
tokio = { version = "1.32.0", features = ["full"] }
